; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/ath/ath_hal/ar5212/extr_ar5111.c_ar5111GetNfAdjust.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/ath/ath_hal/ar5212/extr_ar5111.c_ar5111GetNfAdjust.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.anon = type { i64, i32 }
%struct.ath_hal = type { i32 }
%struct.TYPE_3__ = type { i64 }

@ar5111GetNfAdjust.adjust5111 = internal constant [11 x %struct.anon] [%struct.anon { i64 5790, i32 6 }, %struct.anon { i64 5730, i32 4 }, %struct.anon { i64 5690, i32 3 }, %struct.anon { i64 5660, i32 2 }, %struct.anon { i64 5610, i32 1 }, %struct.anon { i64 5530, i32 0 }, %struct.anon { i64 5450, i32 0 }, %struct.anon { i64 5379, i32 1 }, %struct.anon { i64 5209, i32 3 }, %struct.anon { i64 3000, i32 5 }, %struct.anon zeroinitializer], align 16
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ath_hal*, %struct.TYPE_3__*)* @ar5111GetNfAdjust to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ar5111GetNfAdjust(%struct.ath_hal* %0, %struct.TYPE_3__* %1) #0 {
  %3 = alloca %struct.ath_hal*, align 8
  %4 = alloca %struct.TYPE_3__*, align 8
  %5 = alloca i32, align 4
  store %struct.ath_hal* %0, %struct.ath_hal** %3, align 8
  store %struct.TYPE_3__* %1, %struct.TYPE_3__** %4, align 8
  store i32 0, i32* %5, align 4
  br label %6

6:                                                ; preds = %17, %2
  %7 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %8 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = load i32, i32* %5, align 4
  %11 = sext i32 %10 to i64
  %12 = getelementptr inbounds [11 x %struct.anon], [11 x %struct.anon]* @ar5111GetNfAdjust.adjust5111, i64 0, i64 %11
  %13 = getelementptr inbounds %struct.anon, %struct.anon* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 16
  %15 = icmp sle i64 %9, %14
  br i1 %15, label %16, label %20

16:                                               ; preds = %6
  br label %17

17:                                               ; preds = %16
  %18 = load i32, i32* %5, align 4
  %19 = add nsw i32 %18, 1
  store i32 %19, i32* %5, align 4
  br label %6

20:                                               ; preds = %6
  %21 = load i32, i32* %5, align 4
  %22 = sext i32 %21 to i64
  %23 = getelementptr inbounds [11 x %struct.anon], [11 x %struct.anon]* @ar5111GetNfAdjust.adjust5111, i64 0, i64 %22
  %24 = getelementptr inbounds %struct.anon, %struct.anon* %23, i32 0, i32 1
  %25 = load i32, i32* %24, align 8
  ret i32 %25
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
